infra/k8s/base/scaling-and-edge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firebid
  namespace: firebid
  annotations:
    kubernetes.io/ingress.global-static-ip-name: firebid-ENV-edge
    networking.gke.io/managed-certificates: firebid
    networking.gke.io/v1beta1.FrontendConfig: firebid
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service: {name: firebid-frontend, port: {number: 80}}
